redefining pom files, unifying creation of testcases in MapperServiceImplTest